# hermes-portfolio-manager

./: .gitguardian.yml  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  HERMES.md  Makefile  PROGRESS.md  PROGRESS_2.md  PROGRESS_3.md  PROGRESS_4.md  README.md  SPEC.md  SPEC_2.md  SPEC_4.md  __init__.py  dev_cli.py  mvp_planning_guide.md  plugin.yaml  project-overview.md  pyproject.toml
config/: harnesses.yaml.example
docs/: README.md  hermes-plugin-api-notes.md
plans/: 2026-04-25-guardrails-v1.md  code-review-prompt.md  codex-divergence-assessment.md  codex-fix-artifacts-fingerprint-skill.md  codex-fix-cli.md  codex-fix-config-locks.md  codex-fix-schema.md  codex-fix-schemas-handlers.md  codex-fix-skills.md  codex-gap-analysis.md  deploy-remote-script.md  escalation-log.md  fallback-log.md  fix-ci-failures.md  fix-review-issues.md  fix-smoke-bugs.md  forge-phase2-prompt.md  forge-phase2-skills.md  forge-phase3.md  forge-phase4.md  forge-phase5.md  forge-phase6.md  forge-phase789.md  mvp4-checkpoint-a.md  mvp4-phase1.md  mvp4-phase2.md  mvp6-harness-proposal.md  phase-9-smoke-tests.md
portfolio_manager/: __init__.py  admin_functions.py  admin_locks.py  admin_models.py  admin_writes.py  config.py  errors.py  github_client.py  harness_config.py  harness_runner.py  implementation_artifacts.py  implementation_changes.py  implementation_commit.py  implementation_jobs.py  implementation_locks.py  implementation_paths.py  implementation_planner.py  implementation_preflight.py  implementation_scope_guard.py  implementation_state.py  implementation_test_quality.py  implementation_tools.py  issue_artifacts.py  issue_drafts.py  issue_github.py  issue_resolver.py  maintenance_artifacts.py  maintenance_builtin.py  maintenance_config.py  (+26 more)
(+129 files in other folders)
